bk_ida/gccida/c2/record_value_for_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11621:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11621:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11622:4: error: expected ';' after expression
rtx v11; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11622:5: error: use of undeclared identifier 'v11'
rtx v11; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11626:6: error: use of undeclared identifier 'v15'
rtx *v15; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11627:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v16; // rdx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11630:6: error: use of undeclared identifier 'v19'
rtx *v19; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11631:6: error: use of undeclared identifier 'v20'
rtx *v20; // r8 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11648:4: error: expected ';' after expression
rtx orig; // [rsp+0h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11648:5: error: use of undeclared identifier 'orig'
rtx orig; // [rsp+0h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11650:4: error: expected ';' after expression
rtx v39; // [rsp+10h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11650:5: error: use of undeclared identifier 'v39'
rtx v39; // [rsp+10h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11654:1: error: use of undeclared identifier 'orig'
orig = value; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11665:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[v7] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11681:1: error: use of undeclared identifier 'v39'
v39 = reg; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11700:1: error: use of undeclared identifier 'last_value'
last_value = get_last_value( reg); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11701:6: error: use of undeclared identifier 'last_value'; did you mean '_hex_value'?
if ( last_value ) 
     ^~~~~~~~~~
     _hex_value
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11703:1: error: use of undeclared identifier 'v11'
v11 = last_value; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/combine.c:11703:7: error: use of undeclared identifier 'last_value'; did you mean '_hex_value'?
v11 = last_value; 
      ^~~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_value_for_reg/src/obj/combine.o] Error 1
